# reqwestur

./: Cargo.toml
src/: main.rs
src/ui/: mod.rs  widgets.rs  window.rs
src/ui/widgets/: about.rs  buttons.rs  certificates.rs  chip.rs  frames.rs  groups.rs  headers.rs  help.rs  history.rs  home.rs  menu.rs  mod.rs  notification.rs  payload.rs  pip.rs  request.rs  response.rs  saved_requests.rs  tabs.rs  task_bar.rs
src/utils/: breakpoints.rs  certificates.rs  common.rs  exports.rs  mod.rs  notifications.rs  request.rs  reqwestur.rs  traits.rs
