[package]
name = "reqwestur"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["persistence", "x11"] }
egui_extras = { version = "0.31.1", features = ["svg", "image"] }
futures = "0.3.31"
image = { version = "0.25.6" }
reqwest = "0.12.21"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
