[package]
name = "reqwestur"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["persistence"] }
egui_extras = { version = "0.32.0", features = ["svg", "image", "syntect"] }
futures = "0.3.31"
image = { version = "0.25.6" }
reqwest = { version = "0.12.21", features = ["blocking", "native-tls", "multipart", "json"] }
rfd = "0.15.4"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
